kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edugov-backend
spec:
  type: LoadBalancer
  ports:
    - port: 5001
      targetPort: 5000
  selector:
    app: edugov-backend
